feat: salesforce mappers (#3)
